# samplemaker

./: README.md  setup.cfg
src/samplemaker/: __init__.py  documentation.md  plotly_viewers.py  tests-MODULES.ipynb
tutorials/: 04_Tutorial_Boolean.py  tests.ipynb
