[metadata]
name = samplemaker
version = attr: samplemaker.__version__
author = Leonardo Midolo and Enrico Vallar
author_email = Enrico Vallar
description = Lithographic mask design package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/enrico_vallar/samplemaker/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.package_data]
* = *.pyd, *.txt
